--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pydantic_core==2.16.3
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
