--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,87 @@
 annotated-types==0.6.0
 anyio==4.3.0
 certifi==2024.2.2
-charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-contourpy==1.1.1
-cycler==0.12.1
-exceptiongroup==1.2.0
-fastapi==0.110.1
-filelock==3.13.3
-fonttools==4.50.0
-fsspec==2024.3.1
+dill==0.3.8
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.3
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
-idna==3.6
-importlib_resources==6.4.0
-Jinja2==3.1.3
-kiwisolver==1.4.5
+httpx==0.27.0
+idna==3.7
+Jinja2==3.1.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.7.5
-mpmath==1.3.0
-networkx==3.1
-numpy==1.24.4
-opencv-python==4.9.0.80
-packaging==24.0
-pandas==2.0.3
-pillow==10.3.0
-psutil==5.9.8
-py-cpuinfo==9.0.0
-pydantic==2.6.4
-pydantic_core==2.16.3
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
+mdurl==0.1.2
+orjson==3.10.3
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
-pytz==2024.1
 PyYAML==6.0.1
-requests==2.31.0
-scipy==1.10.1
-seaborn==0.13.2
-six==1.16.0
+rich==13.7.1
+shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
-sympy==1.12
-thop==0.1.1.post2209072238
-torch==2.2.2
-torchvision==0.17.2
-tqdm==4.66.2
-typing_extensions==4.10.0
-tzdata==2024.1
-ultralytics==8.1.42
-urllib3==2.2.1
+typer==0.12.3
+typing_extensions==4.11.0
+ujson==5.10.0
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
-zipp==3.18.1
+
+#### +@@@
+# YOLOv5 requirements
+# Usage: pip install -r requirements.txt
+
+# Base ------------------------------------------------------------------------
+gitpython>=3.1.30
+matplotlib>=3.3
+numpy>=1.23.5
+pillow>=10.3.0
+psutil  # system resources
+PyYAML>=5.3.1
+requests>=2.23.0
+scipy>=1.4.1
+thop>=0.1.1  # FLOPs computation
+tqdm>=4.64.0
+ultralytics>=8.0.232
+# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+
+# Logging ---------------------------------------------------------------------
+# tensorboard>=2.4.1
+# clearml>=1.2.0
+# comet
+
+# Plotting --------------------------------------------------------------------
+pandas>=1.1.4
+seaborn>=0.11.0
+
+# Export ----------------------------------------------------------------------
+# coremltools>=6.0  # CoreML export
+# onnx>=1.10.0  # ONNX export
+# onnx-simplifier>=0.4.1  # ONNX simplifier
+# nvidia-pyindex  # TensorRT export
+# nvidia-tensorrt  # TensorRT export
+# scikit-learn<=1.1.2  # CoreML quantization
+# tensorflow>=2.4.0,<=2.13.1  # TF exports (-cpu, -aarch64, -macos)
+# tensorflowjs>=3.9.0  # TF.js export
+# openvino-dev>=2023.0  # OpenVINO export
+
+# Deploy ----------------------------------------------------------------------
+setuptools>=65.5.1 # Snyk vulnerability fix
+# tritonclient[all]~=2.24.0
+
+# Extras ----------------------------------------------------------------------
+# ipython  # interactive notebook
+# mss  # screenshots
+# albumentations>=1.0.3
+# pycocotools>=2.0.6  # COCO mAP
+wheel>=0.38.0 # not directly required, pinned by Snyk to avoid a vulnerability
+scikit-image
